-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 4.4.0-beta1
-
None
-
1acd9d30dc68fd2b1690a54e2bdc278dfd46cceb
In master (at least a33bf92bd223fb4c095d29e93d75644d658a2e35) remote run targets in Project Settings -> Build & Run -> Run (Run configuration) displays as " (on GDB Server or hardware debugger)" and handles only first target in system.
Attached patch seems that solves issue: baremetal-fix.diff
but I am not sure.
- relates to
-
QTCREATORBUG-19731 Broken Run configuration for Baremetal devices
-
- Closed
-
-
QTCREATORBUG-20094 BareMetal can't create Run config for GDB executable
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-18434 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 198303,5 | BareMetal: fix Run configuration | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |