BareMetal: fix Run configuration

Run configuration is broken for remote GDB and hardware debuggers:
just first target can be handled for project.

Task-number: QTCREATORBUG-18434
Change-Id: I3fcff2d906f377dd5a161f74d2c6b21bc5ab943f
Reviewed-by: Alexander Drozdov <adrozdoff@gmail.com>
Reviewed-by: hjk <hjk@qt.io>